# autoany

./: .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  skills-lock.json
.github/workflows/: ci.yml
autoany/: SKILL.md
autoany-aios/: Cargo.toml
autoany-aios/src/: budget.rs  executor.rs  lib.rs
autoany-core/: Cargo.toml  README.md
autoany-core/src/: budget.rs  comparative_evaluator.rs  constraint.rs  dead_ends.rs  error.rs  evaluator.rs  executor.rs  inheritance.rs  ledger.rs  lib.rs  llm_backend.rs  loop_engine.rs  promotion.rs  proposer.rs  selector.rs  spec.rs  stagnation.rs  strategy.rs  types.rs
autoany-core/tests/: integration_test.rs  loop_test.rs
autoany-lago/: Cargo.toml
autoany-lago/src/: ledger.rs  lib.rs  replay.rs
autoany/assets/: problem-spec.template.yaml
autoany/references/: AUTOREASON.md  DOMAIN-MAPPINGS.md  META-LOOP.md  PROBLEM-SPEC.md  REFERENCE.md
autoany/scripts/: autoany_init.py
examples/ticket-classifier/: README.md  ledger.jsonl  problem-spec.yaml
examples/ticket-classifier/artifacts/: classifier.py
examples/ticket-classifier/eval/: eval_set.jsonl  evaluate.py  run_eval.sh
examples/ticket-classifier/harness/: best_classifier.py  run_loop.py  state.json
skills/: autoany
tests/: test_autoany_init.py
