[package]
name = "autoany-aios"
version = "0.1.0"
edition = "2024"
description = "Arcan runtime adapter for autoany EGRI loops"
license = "MIT"
repository = "https://github.com/broomva/autoany"
authors = ["Carlos D. Escobar-Valbuena <broomva@gmail.com>"]

[dependencies]
autoany_core = { path = "../autoany-core" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
