[package]
name = "autoany-lago"
version = "0.1.0"
edition = "2024"
description = "Lago persistence adapter for autoany EGRI loops"
license = "MIT"
repository = "https://github.com/broomva/autoany"
authors = ["Carlos D. Escobar-Valbuena <broomva@gmail.com>"]

[dependencies]
autoany_core = { path = "../autoany-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
